--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 bin_PROGRAMS = hp2p.exe
-hp2p_exe_SOURCES = hp2p.cpp
-bin_SCRIPTS = vizhp2p vizhp2p_html
+hp2p_exe_SOURCES = hp2p_algo.c hp2p_algo_cpp.cpp hp2p.c hp2p_mpi.c hp2p_util.c
+
 
