add source hp2p_signal to makefile

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 bin_PROGRAMS = hp2p.exe
-hp2p_exe_SOURCES = hp2p_algo.c hp2p_algo_cpp.cpp hp2p.c hp2p_mpi.c hp2p_util.c hp2p_result.c
+hp2p_exe_SOURCES = hp2p_algo.c hp2p_algo_cpp.cpp hp2p.c hp2p_mpi.c hp2p_util.c hp2p_result.c hp2p_signal.c
 bin_SCRIPTS = get_plotlyjs.py
 
